# conventer

./: .gitignore  pyproject.toml  pytest.ini
api/v1/: urls.py
api/v1/converter/: execptions.py  serializers.py  services.py  urls.py  viewsets.py
applications/converter/: apps.py
config/: settings.py
tests/: utils.py
tests/converter/: test_converter.py
tests/fixtures/: fixtures.py
